--- a/17 Latihan Html CSS/style2.css
+++ b/17 Latihan Html CSS/style2.css
@@ -50,6 +50,8 @@
   padding:10px 20px;
   border: none;
   border-radius: 20px;
+  cursor: pointer;
+
 }
 .css22e {
   background-color: white;
@@ -57,4 +59,5 @@
   border: 1px solid;
   padding: 10px 20px;
   border-radius: 20px;
+  cursor: pointer;
 }
